argocd/applications/froussard/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: froussard
  namespace: istio-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`froussard.proompteng.ai`)
      middlewares:
        - name: froussard-knative-host
      services:
        - name: knative-local-gateway
          port: 80
  tls: {}
